inspekcija je utvrdila 'landcover'

--- a/index.htm
+++ b/index.htm
@@ -63,8 +63,7 @@ const layerDefs = [
   { id:'forest', type:'fill', 'source-layer':'wood', paint:{'fill-color':'#228b22','fill-opacity':1}, color:'#228b22' },
   { id:'roads', type:'line', 'source-layer':'transportation', paint:{'line-color':'#aaa','line-width':2} },
   { id:'landuse', type:'fill', 'source-layer':'landuse', paint:{'fill-color':'brown','fill-opacity':1}, color:'brown' },
-  { id:'buildings', type:'fill', 'source-layer':'buildings', paint:{'fill-color':'violet','fill-outline-color':'black','fill-opacity': 1}, color:'black' },
-
+  { id:' landcover', type:'fill', 'source-layer':'landcover', paint:{'fill-color':'gray','fill-outline-color':'black','fill-opacity': .5}, color:'black' },
 ];
 
 const visibleLayers = {};
