--- a/index.htm
+++ b/index.htm
@@ -60,10 +60,10 @@ const sources = {
 // Layer definitions for Custom Croatia
 const layerDefs = [
   { id:'water', type:'fill', 'source-layer':'water', paint:{'fill-color':'#42a5f5','fill-opacity':1}, color:'#42a5f5' },
-  { id:'forest', type:'fill', 'source-layer':'wood', paint:{'fill-color':'#228b22','fill-opacity':1}, color:'#228b22' },
+ // { id:'forest', type:'fill', 'source-layer':'wood', paint:{'fill-color':'#228b22','fill-opacity':1}, color:'#228b22' },
   { id:'roads', type:'line', 'source-layer':'transportation', paint:{'line-color':'#aaa','line-width':2} },
-  { id:'landuse', type:'fill', 'source-layer':'landuse', paint:{'fill-color':'brown','fill-opacity':1}, color:'brown' },
-  { id:' landcover', type:'fill', 'source-layer':'landcover', paint:{'fill-color':'gray','fill-outline-color':'black','fill-opacity': .5}, color:'black' },
+  { id:'landuse', type:'fill', 'source-layer':'landuse', paint:{'fill-color':'brown','fill-opacity': .5}, color:'brown' },
+  { id:' landcover', type:'fill', 'source-layer':'landcover', paint:{'fill-color':'gray','fill-outline-color':'gray','fill-opacity': .5}, color:'black' },
 ];
 
 const visibleLayers = {};
